--- a/user-phone-api/src/main/resources/bootstrap.properties
+++ b/user-phone-api/src/main/resources/bootstrap.properties
@@ -1,8 +1,9 @@
 spring.application.name=user-phone-api
 server.port=8089
+spring.cloud.config.name=user-phone
+spring.cloud.config.uri=http://localhost:8088
 management.endpoints.web.exposure.include = *
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-spring.cloud.config.uri=http://localhost:8088
